--- a/frontend/web/css/modern-business.css
+++ b/frontend/web/css/modern-business.css
@@ -23,6 +23,58 @@ body {
     opacity: 0.8;
 }
 
+a,a:visited,a:hover {
+	text-decoration:none;
+}
+
+
+/* Fonts */
+@font-face {
+	font-family: 'MuseoSansCyrl100';
+	src: url('../fonts/MuseoSansCyrl100.eot') format('embedded-opentype'), url('../fonts/MuseoSansCyrl100.woff') format('woff'), url('../fonts/MuseoSansCyrl100.ttf') format('truetype'), url('../fonts/MuseoSansCyrl100.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'MuseoSansCyrl300';
+	src: url('../fonts/MuseoSansCyrl300.eot') format('embedded-opentype'), url('../fonts/MuseoSansCyrl300.woff') format('woff'), url('../fonts/MuseoSansCyrl300.ttf') format('truetype'), url('../fonts/MuseoSansCyrl300.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'MuseoSansCyrl500';
+	src: url('../fonts/MuseoSansCyrl500.eot') format('embedded-opentype'), url('../fonts/MuseoSansCyrl500.woff') format('woff'), url('../fonts/MuseoSansCyrl500.ttf') format('truetype'), url('../fonts/MuseoSansCyrl500.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'icomoon';
+	src:  url('../fonts/icomoon.eot?4a9nwx');
+	src:  url('../fonts/icomoon.eot?4a9nwx#iefix') format('embedded-opentype'),
+	url('../fonts/icomoon.ttf?4a9nwx') format('truetype'),
+	url('../fonts/icomoon.woff?4a9nwx') format('woff'),
+	url('../fonts/icomoon.svg?4a9nwx#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+.fi{
+	display: inline-block;
+	font: normal normal normal 14px/1 icomoon;
+	font-size: inherit;
+	text-rendering: auto;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+.fi-fw {
+	width: 4.28571429em;
+	text-align: center;
+}
+
+#promo .fi-fw {
+	color: #ffae00;
+}
 /* Home Page Carousel */
 
 header.carousel {
@@ -92,6 +144,64 @@ footer {
     }
 }
 
+/* Promo */
+#promo{
+	position: relative;
+	top: -110px;
+	color: #FFFFFF;
+}
+#promo .promo-blocks{
+	font-size: 16px;
+	line-height: 30px;
+}
+
+.fi-cert:before {
+	content: '\e90a';
+	font-size: 50px;
+	position: relative;
+	top: 16px;
+}
+.fi-hand-shake:before {
+	content: '\e901';
+}
+.fi-price-policy:before {
+	content: '\e909';
+	font-size: 50px;
+	position: relative;
+	top: 16px;
+}
+/*
+.fa-hand-shake:before {
+	content: "";
+	background: url("/img/sprite.png") -60px -203px no-repeat;
+	width: 53px;
+	height: 30px;
+	position: absolute;
+	top: 10px;
+	left: -30px;
+	display: block;
+}
+.fa-price-policy:before {
+	content: "";
+	background: url("/img/sprite.png") -132px -198px no-repeat;
+	width: 44px;
+	height: 44px;
+	position: absolute;
+	top: 16px;
+	left: -30px;
+	display: block;
+}*/
+
+/* Portfolio*/
+#portfolio a{
+	color: #727272;
+}
+#portfolio a h4{
+	color: #333333;
+}
+#portfolio a:hover{
+	color: #FFF;
+}
 
 #portfolio .portfolio-item {
 	height: 175px;
@@ -109,6 +219,40 @@ footer {
 #portfolio .portfolio-item:hover .portfolio-caption, #portfolio .portfolio-item:hover .portfolio-caption p{
 	color: #FFF;
 }
+
+.portfolio-caption i{
+	padding-bottom: 20px;
+}
+#portfolio .fi-fw {
+	color: #000;
+}
+[class^="fi-type-"]:before, [class*=" fi-type-"]:before{
+	font-size: 50px;
+	position: relative;
+	top: 16px;
+}
+.fi-type-1:before{
+	 content: '\e90c';
+}
+.fi-type-2:before{
+	content: '\e90d';
+}
+.fi-type-3:before{
+	content: '\e910';
+}
+.fi-type-4:before{
+	content: '\e90e';
+}
+.fi-type-5:before{
+	content: '\e900';
+}
+.fi-type-6:before{
+	content: '\e90b';
+}
+.fi-type-7:before{
+	content: '\e90d';
+}
+/*
 #portfolio .portfolio-item .img-fasteners {
 	width: 86px;
 	height: 65px;
@@ -134,6 +278,7 @@ footer {
 #portfolio .portfolio-item:nth-child(8) .img-fasteners {
 	background: url("/img/sprite.png") -194px -62px no-repeat;
 }
+*/
 .features{
 	background: url("/img/featuresBackground.png") no-repeat;
 	background-position: center;
@@ -159,7 +304,11 @@ footer {
 footer{
 	background-color: #191919;
 	color: #fff;
-	font-family: 'MuseoSansCyrl00';
+}
+.copyright-mid{
+	display: block;
+	font-size: 15px;
+	font-family: 'MuseoSansCyrl500';
 }
 footer .de:before{
 	content: "";
@@ -168,7 +317,6 @@ footer .de:before{
 	width: 171px;
 	height: 50px;
 }
-
 .adress span{
 	display: block;
 }
