--- a/frontend/web/css/modern-business.css
+++ b/frontend/web/css/modern-business.css
@@ -9,6 +9,7 @@
 html,
 body {
     height: 100%;
+	font-family: 'Open Sans';
 }
 
 body {
@@ -30,26 +31,6 @@ a,a:visited,a:hover {
 
 /* Fonts */
 @font-face {
-	font-family: 'MuseoSansCyrl100';
-	src: url('../fonts/MuseoSansCyrl100.eot') format('embedded-opentype'), url('../fonts/MuseoSansCyrl100.woff') format('woff'), url('../fonts/MuseoSansCyrl100.ttf') format('truetype'), url('../fonts/MuseoSansCyrl100.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'MuseoSansCyrl300';
-	src: url('../fonts/MuseoSansCyrl300.eot') format('embedded-opentype'), url('../fonts/MuseoSansCyrl300.woff') format('woff'), url('../fonts/MuseoSansCyrl300.ttf') format('truetype'), url('../fonts/MuseoSansCyrl300.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'MuseoSansCyrl500';
-	src: url('../fonts/MuseoSansCyrl500.eot') format('embedded-opentype'), url('../fonts/MuseoSansCyrl500.woff') format('woff'), url('../fonts/MuseoSansCyrl500.ttf') format('truetype'), url('../fonts/MuseoSansCyrl500.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-@font-face {
 	font-family: 'icomoon';
 	src:  url('../fonts/icomoon.eot?4a9nwx');
 	src:  url('../fonts/icomoon.eot?4a9nwx#iefix') format('embedded-opentype'),
@@ -58,6 +39,13 @@ a,a:visited,a:hover {
 	url('../fonts/icomoon.svg?4a9nwx#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
+}
+.container{
+	position: relative;
+}
+
+.page-header {
+	border-bottom: none;
 }
 .fi{
 	display: inline-block;
@@ -122,7 +110,7 @@ header.carousel .fill {
 /* Footer Styles */
 
 footer {
-    margin: 50px 0;
+    margin: 0;
 }
 
 /* Responsive Styles */
@@ -146,7 +134,7 @@ footer {
 
 /* Promo */
 #promo{
-	position: relative;
+	position: absolute;
 	top: -110px;
 	color: #FFFFFF;
 }
@@ -202,6 +190,9 @@ footer {
 #portfolio a:hover{
 	color: #FFF;
 }
+#portfolio .page-header{
+	font-weight: bold;
+}
 
 #portfolio .portfolio-item {
 	height: 175px;
@@ -226,7 +217,7 @@ footer {
 #portfolio .fi-fw {
 	color: #000;
 }
-[class^="fi-type-"]:before, [class*=" fi-type-"]:before{
+#portfolio [class*=" fi-type-"]:before{
 	font-size: 50px;
 	position: relative;
 	top: 16px;
@@ -286,13 +277,44 @@ footer {
 }
 
 .features .page-header{
-	color: #ffae00;;
+	color: #ffae00;
 }
 
+/* Call to Action Section */
+.well {
+	background-color: transparent;
+	  border: none;
+	  -webkit-box-shadow: none;
+	box-shadow: none;
+	margin-top: 20px;
+}
 .consult{
 	border-radius: 30px;
 	background-color: #ffae00;
 	color: #FFF;
+}
+.well .row{
+	display: table;
+}
+.well .row > div{
+	display: table;
+	height: 110px;
+}
+.well .cta-text{
+	display: table-cell;
+	height: inherit;
+	vertical-align: middle;
+}
+.cta-1, .cta-2{
+	font-size: 36px;
+	color: #333333;
+}
+
+/* footer */
+
+footer{
+	background-color: #191919;
+	color: #fff;
 }
 .copyright{
 	display: block;
@@ -301,14 +323,23 @@ footer {
 	font-family: 'MuseoSansCyrl500';
 	margin-bottom: 20px;
 }
-footer{
-	background-color: #191919;
-	color: #fff;
-}
 .copyright-mid{
 	display: block;
 	font-size: 15px;
 	font-family: 'MuseoSansCyrl500';
+}
+footer a, footer a:visited{
+	color: #fff;
+}
+footer [class*=" fi-type-"]:before{
+	font-size: 20px;
+	color: #ffae00;
+	position: relative;
+	top: 3px;
+}
+footer .fi-fw {
+	width: 2.28571429em;
+	text-align: center;
 }
 footer .de:before{
 	content: "";
