--- a/frontend/web/css/modern-business.css
+++ b/frontend/web/css/modern-business.css
@@ -320,13 +320,12 @@ footer{
 	display: block;
 	font-size: 18px;
 	color: #ffae00;
-	font-family: 'MuseoSansCyrl500';
-	margin-bottom: 20px;
+	margin: 40px 0 20px;
 }
 .copyright-mid{
 	display: block;
 	font-size: 15px;
-	font-family: 'MuseoSansCyrl500';
+	margin-bottom: 20px;
 }
 footer a, footer a:visited{
 	color: #fff;
@@ -348,7 +347,20 @@ footer .de:before{
 	width: 171px;
 	height: 50px;
 }
+footer .page-header{
+	font-size: 18px;
+	color: #ffae00;
+}
+footer .adress{
+	margin-top: 40px;
+	line-height: 35px;
+	font-size: 18px;
+}
 .adress span{
 	display: block;
+}
+footer .adress .tel{
+	font-size: 24px;
+	color: #ffaf03;
 }
 
