--- a/frontend/web/css/modern-business.css
+++ b/frontend/web/css/modern-business.css
@@ -13,7 +13,8 @@ body {
 }
 
 body {
-    padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    /*padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+	position: relative;
 }
 
 .img-portfolio {
@@ -60,6 +61,32 @@ a,a:visited,a:hover {
 	text-align: center;
 }
 
+/* Header */
+.navbar-inverse{
+	position: absolute;
+	top:0;
+	background-color: transparent;
+	border: none;
+}
+nav .tel{
+	width: 239px;
+	display: inline-block;
+	height: 50px;
+	padding: 15px 15px;
+	font-size: 18px;
+	color: #FFF;
+	line-height: 20px;
+	margin: 0 auto;
+}
+.navbar-inverse .navbar-nav>li>a {
+	color: #ffae00;
+	text-decoration: underline;
+	font-size: 18px;
+}
+nav .tel .prefix{
+	color: #ffae00;
+}
+
 #promo .fi-fw {
 	color: #ffae00;
 }
@@ -80,6 +107,35 @@ header.carousel .fill {
     height: 100%;
     background-position: center;
     background-size: cover;
+}
+.carousel-caption {
+	bottom: 125px;
+}
+.carousel-inner .slide-cont-left{
+	float: left;
+	width: 35%;
+}
+.carousel-inner .slide-cont-left .btn-block {
+	margin-top: 35px;
+	width: 75%;
+	float: right;
+}
+.carousel-inner .slide-cont-right{
+	float: right;
+	width: 35%;
+	text-align: left;
+}
+.carousel-inner .slide-cont-left .sd-1-text-1{
+	font-size: 50px;
+	text-align: right;
+	line-height: 60px;
+}
+.carousel-inner .slide-cont-right .sd-1-text-2{
+	margin-bottom: 25px;
+	font-size: 50px;
+	color: #ffae00;
+	text-align: left;
+	line-height: 60px;
 }
 
 /* 404 Page Styles */
@@ -270,13 +326,29 @@ footer {
 	background: url("/img/sprite.png") -194px -62px no-repeat;
 }
 */
-.features{
+#features{
 	background: url("/img/featuresBackground.png") no-repeat;
 	background-position: center;
 	color: #FFF;
 }
-
-.features .page-header{
+#features div{
+	padding: 0;
+}
+#features div:last-of-type{
+	padding-left: 20px;
+}
+#features .page-header{
+	color: #ffae00;
+}
+#features .fi-fw {
+	width: 2.285714em;
+}
+#features .fi-type-1:before{
+	font-size: 40px;
+}
+#features .full-text{
+	font-weight: bold;
+	font-size: 15px;
 	color: #ffae00;
 }
 
